<package format="3">
    <name>pigeon_sim</name>
    <version>0.0.0</version>
    <description>Simulation of tailsitter UAV for last mile logistics in urban environment</description>
    <maintainer email="jaina488@gmail.com">Akshit Jain</maintainer>

    <url type="website">https://pigeonlabs.in</url>
    <url type="repository">https://github.com/akshitj1/faster.git</url>
    <author>Akshit Jain</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>acl_sim</depend>
    
</package>